--- a/mipagina.html
+++ b/mipagina.html
@@ -26,7 +26,7 @@
                 <li><a href="./pages/reviews.html"><span>Reviews</span></a></li>
                 <li><a href="./pages/sucursales.html"><span>Where are we?</span></a></li>
                 <li><a href="./pages/contacto.html"><span>About Us</span></a></li>
-                <li><a href="./pages/formulario.html"><span>Newsletter</span></a></li>
+                <li><a href="./pages/formulario.html"><span>Contact Us</span></a></li>
             </ul>
         </nav>
     </header>
