--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -22,7 +22,7 @@
                 <li><a href="reviews.html"><span>Reviews</span></a></li>
                 <li><a href="sucursales.html"><span>Where are we?</span></a></li>
                 <li><a href="contacto.html"><span>About us</span></a></li>
-                <li><a href="formulario.html"><span>Newsletter</span></a></li>
+                <li><a href="formulario.html"><span>Contact Us</span></a></li>
             </ul>
         </nav>
     </header>
