Cambios para ver JS

--- a/main.html
+++ b/main.html
@@ -141,6 +141,6 @@
         </nav>
         <p>&copy; 2023 ExploreDndNow!</p>
     </footer>
-    <script src="../js/jsreviews.js" ></script>
+    <script src="./js/jsreviews.js" ></script>
 </body>
 </html>
