Consumo de la API de TMDB para que se vean las peliculas en el main El archivo del API lo hice en otro javascript aparte Arregle la pagina about us, agregue las imagenes y genere info de devs con chatgpt Cambios en el CCS de premieres

--- a/main.html
+++ b/main.html
@@ -35,33 +35,45 @@
         <section class="section-grid">
             <h2 class="title-premieres">Premieres</h2>
             <article class="premieres">
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 1</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 1</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 2</h3>
+                    <div class="premiere"> 
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 2</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 3</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 3</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 4</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 4</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 4</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 5</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 4</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 6</h3>
                     </div>
-                    <div>
-                        <img src="./img/dnd_images/sorcerer.png" width="50%" title= "Title" alt="">
-                        <h3>Peli 4</h3>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 7</h3>
+                    </div>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 8</h3>
+                    </div>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 9</h3>
+                    </div>
+                    <div class="premiere">
+                        <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
+                        <h3 class="premiere-title">Peli 10</h3>
                     </div>
             </article>
             <h2 class="title-news">Latest News</h2>
@@ -141,6 +153,7 @@
         </nav>
         <p>&copy; 2023 ExploreDndNow!</p>
     </footer>
-    <script src="../js/jsreviews.js" ></script>
+    <script src="./js/jsreviews.js" ></script>
+    <script src="./js/app.js" ></script>
 </body>
 </html>
