--- a/pages/about.html
+++ b/pages/about.html
@@ -26,10 +26,30 @@
         </nav>
     </header>
 
-    <section>
+    <section class="section-about">
         <article class="developers">
             <h1>Developers</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ut repellat tenetur soluta repudiandae itaque accusantium, distinctio nostrum ea quae! Perspiciatis iusto numquam nam architecto nobis cum reprehenderit nihil accusamus!</p>
+            <div class="developers-profile">
+                <div class="dev-picture">
+                    <img src="../img/devs/jose_picture.png" alt="jose_picture">
+                </div>
+                <div class="dev-info">
+                    <p>Introducing José, a talented web developer from Venezuela. With a knack for crafting captivating online experiences, José has impressed clients with innovative projects, including an immersive e-commerce platform and dynamic social networking sites. His expertise continues to elevate the digital landscape.</p>
+                </div>
+                <div class="dev-picture">
+                    <img src="../img/devs/omar_picture.png" alt="omar_picture">
+                </div>
+                <div class="dev-info">
+                    <p>Meet Omar, a talented Venezuelan web developer and partner of José. Together, they form a dynamic duo, delivering exceptional online experiences. With a portfolio that includes innovative e-commerce platforms and engaging websites, Omar's expertise contributes to their success in the digital realm.</p>
+                </div>
+            </div>
+            <h1>Join to our Academy</h1>
+            <div class="video-academy">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/79wd8_lZx3g" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                </iframe>
+            </div>
+           
         </article>
         <article class="branches-location">
             <h1>Want a coffe? Come to meet us</h1>
