Cambio de nombre de main a index para ver en github pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="menu-simple-menu">
             <ul>
-                <li><a href="../main.html"><span>Main Page</span></a></li>
+                <li><a href="../index.html"><span>Main Page</span></a></li>
                 <li><a href="reviews.html"><span>Reviews</span></a></li>
                 <li><a href="about.html"><span>About Us</span></a></li>
                 <li><a href="contact.html"><span>Contact Us</span></a></li>
