--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@
                      </div>
                      <div class="map">
                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.99144060815!2d2.292292615215076!3d48.8583736086627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTorre%20Eiffel!5e0!3m2!1ses-419!2sar!4v1679671082507!5m2!1ses-419!2sar" 
-                         height="250" style="border:0;" align="left" allowfullscreen="" 
+                         height="250" style="border:0;" allowfullscreen="" 
                          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                          </iframe>
                      </div>
@@ -71,7 +71,7 @@
                      </div>
                      <div class="map">
                          <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3547685.1705004843!2d-47.737288498154314!3d40.95025845528019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDQzJzU1LjAiTiA0OcKwNTYnNDUuMCJX!5e0!3m2!1ses-419!2sar!4v1679672354991!5m2!1ses-419!2sar" 
-                         height="250"  style="border:0;" align="left" allowfullscreen="" 
+                         height="250"  style="border:0;" allowfullscreen="" 
                          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                          </iframe>
                      </div>
@@ -82,7 +82,7 @@
                      </div>
                      <div class="map">
                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.006803463767!2d31.13162697487589!3d29.979234474956527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14584587ac8f291b%3A0x810c2f3fa2a52424!2sGran%20Pir%C3%A1mide%20de%20Guiza!5e0!3m2!1ses!2sar!4v1681851631352!5m2!1ses!2sar" 
-                         height="250" style="border:0;" align="left" allowfullscreen="" 
+                         height="250" style="border:0;" allowfullscreen="" 
                          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                        </iframe>
                      </div>
