Cambios de fuente para pantallas grandes

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,12 +34,14 @@
                     <img src="../img/devs/jose_picture.png" alt="jose_picture">
                 </div>
                 <div class="dev-info">
+                    <h2>José Villar</h2>
                     <p>Introducing José, a talented web developer from Venezuela. With a knack for crafting captivating online experiences, José has impressed clients with innovative projects, including an immersive e-commerce platform and dynamic social networking sites. His expertise continues to elevate the digital landscape.</p>
                 </div>
                 <div class="dev-picture">
                     <img src="../img/devs/omar_picture.png" alt="omar_picture">
                 </div>
                 <div class="dev-info">
+                    <h2>Omar Ardila</h2>
                     <p>Meet Omar, a talented Venezuelan web developer and partner of José. Together, they form a dynamic duo, delivering exceptional online experiences. With a portfolio that includes innovative e-commerce platforms and engaging websites, Omar's expertise contributes to their success in the digital realm.</p>
                 </div>
             </div>
