Agregue flechas al carrusel Solucione el problema de los titulos stickys

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -291,5 +291,6 @@
     
     </section>
     <script src="../js/jsreviews.js" ></script>
+    <script src="../js/app.js" ></script>
 </body>
 </html>
