--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/2327621b91.js" crossorigin="anonymous"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-zJbYYeWY2lNZzVSW+JAhCkE02/QWZDtxB+VpupOPh3E7JNhWPOY9qb7V1J6QvA8RJW6Z+Kr6w5UvlQ1tbI/YjQ==" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/2327621b91.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-zJbYYeWY2lNZzVSW+JAhCkE02/QWZDtxB+VpupOPh3E7JNhWPOY9qb7V1J6QvA8RJW6Z+Kr6w5UvlQ1tbI/YjQ==" crossorigin="anonymous" />
 </head>
 <body>
     <header>
@@ -74,6 +75,13 @@
                         <img class="premiere-img" src="#" width="50%" title= "premiere-poster" alt="premiere-poster">
                         <h3 class="premiere-title">Peli 10</h3>
                     </div>
+                    <div class="scroll-test"> 
+                        <div class="scroll-arrows">
+                            <div class="left-arrow"><i class="fas fa-chevron-left"></i></div>
+                            <div class="right-arrow"><i class="fas fa-chevron-right"></i></div>
+                        </div>
+                    </div>
+                    
             </article>
             <h2 class="title-news">Latest News</h2>
             <article class="img1">
