--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
                     <input type="text" id="lastname" name="lastname" >
                     <br><br>
                     <label for="phone">Phone Numbre</label>
-                    <input type="text" id="phone" name="phone" >
+                    <input type="text" id="phone" name="phone" pattern="\(\d{3}\)\d{4}-\d{4}" placeholder="(011) XXXX-XXXX">
                     <br><br>
                     <label for="birthdate"> Birthdate</label>
                     <input type="date" id="birthdate" name="birthdate">
