Cleaning innecesary comments

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,13 +53,9 @@
                     <br><br>
                     <label for="comments"> Let our knows your comments</label>
                     <form action="" method="">
-                        <fieldset class="comments-fieldset"> <!-- Agregue un cuadro para comentarios -->
+                        <fieldset class="comments-fieldset">
                             <div class="comments">
-                                
                                 <textarea class="textarea-comments" name="comment" rows="10" placeholder="Leave your comment"></textarea>
-                                <!--<br><br>
-                                <input type="submit" value="submit">
-                                <input type="reset" value="Clear">-->
                             </div>
                         </fieldset>
                 </fieldset>
